# marketing-MAS-multi-agent-system

./: README.md  prompt for custom company.txt  pyproject.toml
db/: chroma.sqlite3
src/: report.md
src/config/: agents.yaml
src/db/: chroma.sqlite3
src/research_crew/: crew.py  main.py
src/research_crew/config/: agents.yaml  tasks.yaml
