[project]
name = "research_crew"
version = "0.1.0"
description = "research_crew using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.28.8",
]

[project.scripts]
research_crew = "research_crew.main:run"
run_crew = "research_crew.main:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
